// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty message 1`] = `
<ul
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-small"
    >
      Expenses
    </div>
    <div
      className="show-for-large"
    >
      Expense
    </div>
    <div
      className="show-for-large"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</ul>
`;

exports[`should render expense list with expenses 1`] = `
<ul
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-small"
    >
      Expenses
    </div>
    <div
      className="show-for-large"
    >
      Expense
    </div>
    <div
      className="show-for-large"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={80000}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={12000}
      createdAt={345600000}
      description="Creditcard"
      id="3"
      key="3"
      note=""
    />
  </div>
</ul>
`;
